Add integration test (scan a CAS index)